# mfd0816

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DESIGN  EMUAPI  INSTRUCTIONS  MFDASM  MRI  Makefile  README  mfd-c16..json
.github/workflows/: build.yml  (+2 more)
asm/: .clang-format  CMakeLists.txt  MRI.txt  README  build.mb  doxyfile  notes  test.asm  test.asm.mri
asm/examples/: hello_world.asm
asm/include/: result.hpp
asm/mfdasm/: int_ops.hpp  log.cpp  log.hpp  main.cpp  panic.cpp  panic.hpp  result.hpp  typedefs.hpp
asm/mfdasm/cli/: args.cpp  args.hpp
asm/mfdasm/impl/: asmerror.cpp  asmerror.hpp  assembler.cpp  assembler.hpp  ast.cpp  ast.hpp  directive_operand.cpp  directive_operand.hpp  instruction_operand.cpp  instruction_operand.hpp  section.cpp  section.hpp  token.cpp  token.hpp
asm/mfdasm/impl/mri/: mri.cpp  mri.hpp  section_table.cpp  section_table.hpp
asm/src/: main.cpp  typedefs.hpp
asm/src/cli/: args.cpp  args.hpp
asm/src/impl/: asmerror.hpp  assembler.cpp  assembler.hpp  line.hpp  section.hpp  token.cpp  token.hpp
emu/: .clang-format  .gitignore  CMakeLists.txt  build.mb
emu/mfdemu/: log.cpp  log.hpp  main.cpp  mri.cpp  mri.hpp  panic.cpp  panic.hpp  typedefs.hpp
emu/mfdemu/cli/: args.cpp  args.hpp
emu/mfdemu/impl/: aio_device.cpp  aio_device.hpp  bus_device.hpp  cpu.cpp  cpu.hpp  instructions.hpp  system.cpp  system.hpp
emu/mfdemu/impl/bus/: aio_device.cpp  aio_device.hpp  bus_device.hpp  gio_device.cpp  gio_device.hpp
emu/mfdemu/plugin/: api.hpp
rom_src/: bc16.inc  initial_orders.asm
scripts/: helpers.sh  run-clang-format.sh  static-checks.sh
shared/: CMakeLists.txt  int_ops.hpp  log.cpp  log.hpp  mri_types.hpp  panic.cpp  panic.hpp  typedefs.hpp
test/: .clang-format  CMakeLists.txt
tests/: CMakeLists.txt  build.mb  compile_flags.txt  helpers.bash
tests/unit/: asm_encode.cpp  asm_parse.cpp  emu_arithmetic.cpp  emu_gio.cpp  mri.cpp  test.cpp
(+14 files in other folders)
